feat: migração para Electron + licenciamento por hardware + limpeza geral
- Empacotamento desktop com Electron + electron-builder (NSIS installer)
- Fingerprint de hardware (CPU, disco, MAC, hostname) via SHA-256
- Integração de ativação de licença com central-licencas
- Substituição bcrypt por bcryptjs (dependência nativa eliminada)
- Remoção de arquivos legados (bat launchers, installer/, dados locais)
- Remoção de código não utilizado (nowISO, @types/bcrypt, script migrate)
- Bypass de licença em modo desenvolvimento
- Health check movido antes do licenseGuard
- README.md profissional com documentação completa
- Atualização do .gitignore (tsbuildinfo, installer/, db-shm, db-wal)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,22 @@ node_modules/
 dist/
 .env
 *.local
+
+# Electron
+release/
+*.exe
+*.blockmap
+*.yml
+
+# Build artifacts
+*.tsbuildinfo
+installer/
+
+# Data
+data/
+backups/
+*.db
+*.db-shm
+*.db-wal
+.license
+.backup-settings.json
