--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+*.tsbuildinfo
+
+# Environment
 .env
+.env.*
 *.local
 
 # Electron
@@ -8,16 +15,33 @@ release/
 *.exe
 *.blockmap
 *.yml
+!package.json
 
 # Build artifacts
-*.tsbuildinfo
 installer/
 
-# Data
+# Data & Database
 data/
 backups/
 *.db
 *.db-shm
 *.db-wal
+
+# License
 .license
 .backup-settings.json
+
+# OS files
+Thumbs.db
+Desktop.ini
+.DS_Store
+
+# IDE
+.vscode/
+!.vscode/settings.json
+!.vscode/extensions.json
+.idea/
+
+# Logs
+*.log
+npm-debug.log*
